--- a/src/css/userAccount.css
+++ b/src/css/userAccount.css
@@ -8,7 +8,7 @@
 }
 
 .user-account-remove-favorite-container{
-    border-left: 2px solid #dfdfdf;
+    border-left: 2px solid #ebebeb;
     height: 100%;
     align-items: center;
     justify-content: center;
@@ -18,7 +18,7 @@
 }
 
 .user-account-remove-favorite-container:hover{
-    background-color: whitesmoke;
+    background-color: rgb(240, 240, 240);
     cursor: pointer;
 }
 .user-account-remove-favorite{
@@ -40,7 +40,7 @@
     
 }
 .user-account-remove-favorite:hover{
-    background-color: #e7e7e7;
+    background-color: #979797;
     cursor: pointer;
 }
 
@@ -252,7 +252,7 @@
 
     display: inline-flex;
     width: 25%;
-    height: 300px;
+    height: 293px;
     background-color: var(--background-card);
     box-shadow: 0px 0 12px 0px #fff;
     z-index: 0;
@@ -264,6 +264,9 @@
     top: 100px;
 }
 
+.manage-account-options:nth-last-child(){
+    border-bottom: 1px solid violet;
+}
 .account-options-item{
     font-size: 18px;
     font-family: serif;
